# speech-rag

./: .gitignore  EXAMPLE.md  README.md  TESTING.md  UV_GUIDE.md  evaluation_results.json  pyproject.toml  requirements.txt  setup.py
config/: config.yaml
configs/: adapter.yaml  generator.yaml  retriever.yaml  speech_encoder.yaml  text_embedder.yaml  training.yaml
scripts/: evaluate.py  evaluate_librispeech_retrieval.py  index_librispeech.py  inference.py  quick_test.sh  test_librispeech_e2e.py  train.py
scripts/evaluate/: evaluate_e2e.py  evaluate_generation.py  evaluate_retrieval.py
src/: __init__.py
src/adapter/: __init__.py  adapter.py  distillation_loss.py
src/baselines/: __init__.py  cascaded_rag.py  semi_cascaded_rag.py
src/dados/: __init__.py  librispeech_loader.py
src/data/: __init__.py  dataset.py  json_test.py  local_spoken_squad.py  preprocessing.py
src/generator/: __init__.py  audio_conditioning.py  slm_generator.py
src/inference/: __init__.py  generator.py  rag_pipeline.py  retriever.py
src/models/: __init__.py  speech_adapter.py  speech_encoder.py  text_encoder.py
src/pipeline/: __init__.py  speech_rag_pipeline.py
src/retriever/: __init__.py  index_manager.py  indexer.py  similarity_search.py  speech_retriever.py
src/speech_encoder/: __init__.py  audio_processor.py  pooling.py  speech_encoder.py
src/text_embedder/: __init__.py  text_embedder.py
src/training/: __init__.py  augmentation.py  data_loader.py  evaluator.py  losses.py  train_adapter.py  trainer.py
src/utils/: __init__.py  audio_chunking.py  normalization.py
tests/: __init__.py  conftest.py  test_adapter.py  test_audio_chunking.py  test_data_pipeline.py  test_dataset.py  test_generator.py  test_inference_pipeline.py  test_integration.py  test_models.py  test_normalization.py  test_qwen_inference.py  test_rag_pipeline.py  test_retriever.py  test_speech_encoder.py  test_text_embedder.py  test_training_pipeline.py
