[project]
name = "speech-rag"
version = "0.1.0"
description = "Speech Retrieval-Augmented Generation without Automatic Speech Recognition"
readme = "README.md"
requires-python = ">=3.8,<3.12"
license = {text = "MIT"}
authors = [
    {name = "Speech RAG Team"}
]
keywords = ["speech", "retrieval", "rag", "nlp", "audio", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core ML frameworks
    "torch>=2.0.0,<3.0.0",
    "torchaudio>=2.0.0,<3.0.0",
    # Transformers and dependencies
    "transformers>=4.35.0,<5.0.0",
    "packaging>=20.0",
    "filelock>=3.12.0",
    "huggingface-hub>=0.19.0",
    "tokenizers>=0.15.0",
    "safetensors>=0.4.0",
    # Datasets
    "datasets>=2.14.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0",
    # Audio processing
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    # Retrieval
    "faiss-cpu>=1.7.4",
    # Utilities
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
gpu = [
    "faiss-gpu>=1.7.2",
]
all = [
    "speech-rag[dev,gpu]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

